--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
-        "test": "jest --watch"
+        "test": "jest --watch",
+        "build": "webpack"
     },
     "dependencies": {
         "jest": "^29.7.0"
