cut watch mode for CI

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
-        "test": "jest --watch",
+        "test": "jest",
+        "test:watch": "jest --watch",
         "start": "cross-env NODE_ENV=development webpack",
         "build": "webpack",
         "cypress:open": "cypress open"
