--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "scripts": {
         "test": "jest",
         "test:watch": "jest --watch",
-        "start": "cross-env NODE_ENV=development webpack",
+        "start": "webpack serve --open",
         "build": "webpack",
         "cypress:open": "cypress open"
     },
@@ -15,6 +15,7 @@
         "cypress": "^13.5.0",
         "html-webpack-plugin": "^5.5.3",
         "webpack": "^5.89.0",
-        "webpack-cli": "^5.1.4"
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
     }
 }
