--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "devDependencies": {
         "copy-webpack-plugin": "^11.0.0",
         "cross-env": "^7.0.3",
+        "css-loader": "^6.8.1",
         "cypress": "^13.5.0",
         "html-webpack-plugin": "^5.5.3",
+        "style-loader": "^3.3.3",
         "webpack": "^5.89.0",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.15.1"
