--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
     "scripts": {
-        "test": "jest",
+        "test": "npm run test:unit && npm run test:e2e",
         "test:watch": "jest --watch",
         "start": "webpack serve --open",
         "build": "webpack",
-        "cypress:open": "cypress open"
+        "cypress:open": "cypress open",
+        "start:server": "webpack serve --open",
+        "test:e2e": "cypress run",
+        "test:unit": "jest"
     },
     "dependencies": {
         "jest": "^29.7.0"
@@ -13,9 +16,10 @@
         "copy-webpack-plugin": "^11.0.0",
         "cross-env": "^7.0.3",
         "css-loader": "^6.8.1",
-        "cypress": "^13.5.0",
+        "cypress": "^13.5.1",
         "html-webpack-plugin": "^5.5.3",
         "style-loader": "^3.3.3",
+        "wait-on": "^7.2.0",
         "webpack": "^5.89.0",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^4.15.1"
